@@ -3,8 +3,6 @@ package io.github.muehmar.pojobuilder.example.custombuildmethod;
 import io.github.muehmar.pojobuilder.annotations.BuildMethod;
 import io.github.muehmar.pojobuilder.annotations.PojoBuilder;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import lombok.Value;
 
@@ -14,10 +12,7 @@ public class CustomThrowingBuildMethod {
   String url;
 
   @BuildMethod
-  static String customBuildMethod(CustomThrowingBuildMethod instance)
-      throws URISyntaxException, MalformedURLException {
-    new URI(instance.url);
-    new URL(instance.url);
-    return instance.url;
+  static URL customBuildMethod(CustomThrowingBuildMethod instance) throws MalformedURLException {
+    return new URL(instance.url);
   }
 }
